2001-08-07 Tuesday 16:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.22), include/thai/thctype.h (1.7),
	src/thctype/thctype.c (1.7), tests/test_thctype.c (1.2): Add
	consonant shapes classification in thctype, for the use of elegant
	renderers.

2001-08-06 Monday 21:08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.21), configure.in (1.12), include/thai/thrend.h
	(1.3), src/Makefile.am (1.9), src/thinp/thinp.c (1.3),
	src/thrend/.cvsignore (1.1), src/thrend/Makefile.am (1.1),
	src/thrend/thrend.c (1.1): Add partial implementation for thrend
	(cell clustering). Change cell definition (WTT hilo byte encoding
	is too complicated). Use menomic TIS character names in thinp.c.

2001-08-05 Sunday 19:42  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.20), include/thai/thinp.h (1.6), src/thinp/thinp.c
	(1.2): Change th_validate() to take more context. Define conversion
	mechanism more deliberately. Implement th_validate().

2001-08-04 Saturday 23:04  Pattara Kiatisevi <ott@linux.thai.net>

	* ChangeLog (1.19, r0_1_0): -before release 0.1.0

2001-08-04 Saturday 22:46  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thailib.h (1.5, r0_1_0): Resolve conflict.

2001-08-04 Saturday 22:32  Pattara Kiatisevi <ott@linux.thai.net>

	* include/thai/thailib.h (1.4): -sunCC prefers ((thchar_t) ~0) than
	~((thchar_t) 0) (from P'Thep)

2001-08-04 Saturday 22:26  Pattara Kiatisevi <ott@linux.thai.net>

	* src/thwbrk/thwbrk.c (1.5), tests/test_thbrk.c (1.4) (utags:
	r0_1_0): -casting

2001-08-04 Saturday 22:11  Pattara Kiatisevi <ott@linux.thai.net>

	* tests/test_thwbrk.c (1.3, r0_1_0): -casting

2001-08-04 Saturday 22:08  Pattara Kiatisevi <ott@linux.thai.net>

	* tests/test_thwchar.c (1.3, r0_1_0): -change comments to C-style

2001-08-04 Saturday 21:59  Pattara Kiatisevi <ott@linux.thai.net>

	* src/thbrk/thbrk.c (1.8, r0_1_0): -fix missing casting between
	char * and unsigned char *
